--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'javax.servlet:jstl:1.2'
     compile 'org.liquibase:liquibase-core:3.0.5'
     compile 'joda-time:joda-time:2.3'
+    compile 'org.jadira.usertype:usertype.core:3.1.0.CR8'        
     providedCompile 'org.apache.tomcat:tomcat-servlet-api:7.0.42'
 }
 
